# geni-tools

./: .gitignore  .project  CHANGES  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL-centos.md  INSTALL.centos  INSTALL.fedora  INSTALL.macos  INSTALL.txt  INSTALL.ubuntu  LICENSE.txt  MANIFEST.in  MANIFEST.in.omni  MANIFEST.in.servers  Makefile  Makefile.am  README-authorization.txt  README-clearpassphrases.txt  README-clearpemcert  README-clearpemcert.txt  README-gcf.txt  README-lib.txt  README-omni.txt  README-omni.wiki  README-omniconfigure.txt  README-packaging.md  README-scheduling.txt  README-stitching.txt  README.md  README.txt  TODO.txt  TROUBLESHOOTING.txt  agg_nick_cache.base  autogen.sh  configure.ac  gcf_config  gcf_config.sample  geni-tools.spec  geni_aggregates  (+8 more)
acceptance_tests/: omni_accept.conf
debian/: control  (+6 more)
examples/: Makefile.am  addMemberToSliceAndSlivers.py  example_am_policies.py  example_am_policy_map.json  expirationofmyslices.py  myscript.py  readyToLogin.py  remote-execute.py  renewSliceAndSlivers.py
examples/stitching/: README-stitch.txt  sample.py
examples/stitching/libstitch/: __init__.py  createDocs.sh  libstitch.doxy  runTests.sh  stitch.py
examples/stitching/libstitch/cache/: ion-advertise-old-URNs.xml  max-advertise-old-URNs.xml  protogeni-advertise-matchreq-eth0.xml
examples/stitching/libstitch/samples/: ion-manifest.xml  ion-request.xml  max-manifest.xml  max-request.xml  utah-manifest.xml  utah-request.xml
examples/stitching/libstitch/src/: defs.py  exception.py  request.py  rspec.py  stitchsession.py  util.py
examples/stitching/libstitch/templates/: template_login.sh  template_setup.sh
examples/stitching/libstitch/tests/: test_rspec.py
src/: Makefile.am  api_test.py  clear-passphrases.py  clear-pem-cert.py  client.py  delegateSliceCred.py  documented_omni_config_dont_use  gam.py  gcf-am-gib.py  gcf-am.py  gcf-ch.py  gcf-gch-gib.py  gcf-gch.py  gcf-pgch.py  gcf-proxy-test.py  gcf-proxy.py  gcf-test.py  gcf_version.py  gch.py  gen-certs.py  gib-startup.sh  init-ca.py  omni-configure.py  omni.py  omni_config  omni_log_conf_sample.conf  omni_unittest.py  reindent.py  slicecred.py  stitcher.py
src/gcf/: gcf_version.py  oscript.py  stitcher_logging.conf  stitcher_logging_deft.py
src/gcf/geni/: SecureThreadedXMLRPCServer.py  SecureXMLRPCServer.py  XMLRPCServer.py  __init__.py  am1.py  ca.py  ch.py  config.py  gch.py  pgch.py
src/gcf/geni/am/: aggregate.py  am2.py  am3.py  am_method_context.py  api_error_exception.py  fakevm.py  proxyam.py  resource.py  test_ams.py
src/gcf/geni/am/gibaggregate/: am_gib.py  config.py  gib_manager.py  graphUtils.py  resources.py  rspec_handler.py
src/gcf/geni/auth/: abac_authorizer.py  abac_authorizer_server.py  abac_resource_manager.py  am_policies.json  argument_guard.py  authorizer_client.py  authorizer_server.py  base_authorizer.py  binders.py  resource_binder.py  sfa_authorizer.py  util.py
src/gcf/geni/util/: cert_util.py  ch_interface.py  cred_util.py  error_util.py  rspec_schema.py  rspec_util.py  secure_xmlrpc_client.py  speaksfor_util.py  tz_util.py  urn_util.py
src/gcf/omnilib/: amhandler.py  chhandler.py  handler.py  stitchhandler.py
src/gcf/omnilib/frameworks/: framework_apg.py  framework_base.py  framework_chapi.py  framework_gcf.py  framework_gch.py  framework_gib.py  framework_of.py  framework_pg.py  framework_pgch.py  framework_sfa.py
src/gcf/omnilib/stitch/: GENIObject.py  ManifestRSpecCombiner.py  RSpecParser.py  VLANRange.py  __init__.py  defs.py  gmoc.py  launcher.py  objects.py  scs.py  utils.py  workflow.py
src/gcf/omnilib/util/: __init__.py  abac.py  credparsing.py  dates.py  dossl.py  faultPrinting.py  files.py  handler_utils.py  json_encoding.py  namespace.py  omnierror.py  paths.py
src/gcf/omnilib/xmlrpc/: client.py
src/gcf/sfa/: README.txt
src/gcf/sfa/trust/: abac_credential.py  certificate.py  credential.py  credential_factory.py  credential_legacy.py  gid.py
src/gcf/sfa/util/: faults.py  genicode.py  sfalogging.py  sfatime.py  xrn.py
src/geni/: SecureThreadedXMLRPCServer.py  SecureXMLRPCServer.py  __init__.py  am.py  am1.py  ca.py  ch.py  ch_interface.py  config.py  credential.py  gch.py  pgch.py
src/geni/am/: __init__.py  aggregate.py  am.py  am2.py  am3.py  fakevm.py  proxyam.py  reference.py  resource.py
src/geni/am/gibaggregate/: am_gib.py  config.py  gib_manager.py  graphUtils.py  resources.py  rspec_handler.py
src/geni/am/gibaggregate/sliceSpecificScripts/: createSliver.sh  gib-manifest.rspec
src/geni/am/gibaggregate/standardScripts/: deleteSliver.sh  gib-advert.rspec  hostSetup.sh
src/geni/omni/frameworks/: framework_base.py  framework_gcf.py  framework_pg.py  framework_sfa.py
src/geni/omni/omnispec/: __init__.py  omnispec.py  rspec_gcf.py  rspec_of.py  rspec_pg.py  rspec_sfa.py  translation.py
src/geni/omni/util/: namespace.py
src/geni/omni/xmlrpc/: client.py
src/geni/util/: cert_util.py  ch_interface.py  cred_util.py  credential.py  error_util.py  rspec_schema.py  rspec_util.py  speaksfor_util.py  urn_util.py
src/omnilib/: amhandler.py  chhandler.py  handler.py  stitchhandler.py
src/omnilib/frameworks/: framework_apg.py  framework_base.py  framework_chapi.py  framework_gcf.py  framework_gch.py  framework_gib.py  framework_of.py  framework_pg.py  framework_pgch.py  framework_sfa.py
src/omnilib/omnispec/: omnispec.py  rspec_gcf.py  rspec_of.py  rspec_pg.py  rspec_sfa.py  translation.py
src/omnilib/stitch/: GENIObject.py  ManifestRSpecCombiner.py  RSpecParser.py  VLANRange.py  __init__.py  defs.py  gmoc.py  launcher.py  objects.py  scs.py  utils.py  workflow.py
src/omnilib/util/: __init__.py  abac.py  credparsing.py  dates.py  dossl.py  faultPrinting.py  files.py  handler_utils.py  json_encoding.py  m2ssl.py  namespace.py  omnierror.py  paths.py
src/omnilib/xmlrpc/: client.py
src/sfa/: README.txt
src/sfa/trust/: abac_credential.py  certificate.py  credential.py  credential_factory.py  credential_legacy.py  gid.py  rights.py
src/sfa/util/: faults.py  genicode.py  namespace.py  sfalogging.py  sfatime.py  xrn.py
(+84 files in other folders)
