## Process this file with automake to produce Makefile.in

SUBDIRS = src examples

.PHONY: $(SUBDIRS)

dist_doc_DATA = \
	CHANGES \
	CONTRIBUTING.md \
	CONTRIBUTORS.md \
	INSTALL.centos \
	INSTALL.fedora \
	INSTALL.macos \
	INSTALL.txt \
	INSTALL.ubuntu \
	LICENSE.txt \
	README-authorization.txt \
	README-clearpassphrases.txt \
	README-gcf.txt \
	README-lib.txt \
	README-omni.txt \
	README-omniconfigure.txt \
	README-scheduling.txt \
	README-stitching.txt \
	README.md \
	README.txt \
	TROUBLESHOOTING.txt

EXTRA_DIST =  \
	agg_nick_cache.base \
	gcf_config.sample \
	omni_config.sample \
	mac_install/INSTALL.txt \
	mac_install/OmniGraphic.png \
	mac_install/addAliases.command \
	mac_install/background.png \
	mac_install/makeMacdmg.sh \
	windows_install/LICENSE.TXT \
	windows_install/infoAfterFile.rtf \
	windows_install/install.vbs \
	windows_install/package_builder.iss \
	windows_install/setup.py