## Process this file with automake to produce Makefile.in

SUBDIRS = src examples

.PHONY: $(SUBDIRS)

dist_doc_DATA = \
	CHANGES \
	CONTRIBUTING.md \
	CONTRIBUTORS.md \
	INSTALL-centos.md \
	INSTALL.fedora \
	INSTALL.macos \
	INSTALL.txt \
	INSTALL.ubuntu \
	LICENSE.txt \
	README-clearpassphrases.txt \
	README-gcf.txt \
	README-omni.txt \
	README-omniconfigure.txt \
	README-stitching.txt \
	README.md \
	README.txt \
	TROUBLESHOOTING.txt

dist_pkgdata_DATA = \
	gcf_config.sample \
	omni_config.sample \
	agg_nick_cache.base

EXTRA_DIST =  \
	README-authorization.txt \
	README-lib.txt \
	README-packaging.md \
	README-scheduling.txt \
	acceptance_tests/AM_API/am_api_accept_delegate.py \
	acceptance_tests/AM_API/am_api_accept_nagios.py \
	acceptance_tests/AM_API/am_api_accept.py \
	acceptance_tests/AM_API/am_api_accept_scaling.py \
	acceptance_tests/AM_API/am_api_accept_shutdown.py \
	acceptance_tests/AM_API/bad.xml.sample \
	acceptance_tests/AM_API/logging.conf \
	acceptance_tests/AM_API/omni_config.sample \
	acceptance_tests/AM_API/README-accept-AMAPI.txt \
	acceptance_tests/AM_API/request1.xml.sample \
	acceptance_tests/AM_API/request2.xml.sample \
	acceptance_tests/AM_API/request3.xml.sample \
	acceptance_tests/AM_API/request_pgv2.xml \
	acceptance_tests/AM_API/request.xml.sample \
	acceptance_tests/AM_API/untrusted-usercred.xml \
	debian/changelog \
	debian/compat \
	debian/control \
	debian/copyright \
	debian/rules \
	mac_install/INSTALL.txt \
	mac_install/addAliases.command \
	mac_install/makeMacdmg.sh \
	windows_install/LICENSE.TXT \
	windows_install/infoAfterFile.rtf \
	windows_install/install.vbs \
	windows_install/package_builder.iss \
	windows_install/setup.py
